### CMakeLists.txt ---
## 
## Author: Julien Wintz
## Created: Thu Mar  7 21:55:59 2013 (+0100)
## Version: 
## Last-Updated: Thu Mar  7 22:47:01 2013 (+0100)
##           By: Julien Wintz
##     Update #: 10
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(qt-ios-examples-widgets-mouse-events)
add_subdirectory(qt-ios-examples-widgets-touch-events)
