### CMakeLists.txt ---
##
## Author: Julien Wintz
## Created: Thu Mar  7 21:55:59 2013 (+0100)
## Version:
## Last-Updated: Mon Mar 11 12:20:14 2013 (+0100)
##           By: Julien Wintz
##     Update #: 13
######################################################################
##
### Change Log:
##
######################################################################

add_subdirectory(qt-ios-examples-widgets-mouse-events)
add_subdirectory(qt-ios-examples-widgets-touch-events)
add_subdirectory(qt-ios-examples-widgets-stylesheets)
